--- a/.env
+++ b/.env
@@ -4,3 +4,7 @@ DB_HOST=localhost
 DB_USER=root
 DB_PASS=admin
 DB_NAME=library
+
+# Kirim OTP Email
+EMAIL_USER=kevinprasetyo817@gmail.com
+EMAIL_PASS=dxrukgyapxtrinhe
